# Gusto-Engine

./: CMakeLists.txt  README.md  imgui.ini
include/Components/: Definitions.h  FileManager.h  Shader.h  Texture.h
include/Containers/: Color.h
include/Dependencies/glad/: glad.h
include/Graphics/: RigidBody.h  Shape.h
include/Math/: Color.h  Vector.h
include/Physics/: Collision.h  Space.h
include/Shaders/Color/: fragmentShader.glsl  vertexShader.glsl
include/Shaders/Texture/: fragmentShader.glsl  vertexShader.glsl
include/Shapes/: Polygon.h  Rectangle.h
include/Sprites/: Object.h  Player.h  RigidBody.h
include/System/: Color.h  Shader.h  Texture.h  Window.h
res/shaders/: color.glsl  texture.glsl
src/: main.cpp
src/Components/: FileManager.cpp  Shader.cpp  Texture.cpp
src/Containers/: Color.cpp
src/Dependencies/: glad.c
src/Graphics/: RigidBody.cpp  Shape.cpp
src/Math/: Color.cpp  Vector.cpp
src/Physics/: Collsion.cpp  Space.cpp
src/Shapes/: Polygon.cpp  Rectangle.cpp
src/Sprites/: Object.cpp  Player.cpp  RigidBody.cpp
src/System/: Color.cpp  FileManager.cpp  Shader.cpp  Texture.cpp  Window.cpp
